change scrollbar styles, fix when page already loaded

--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -14,6 +14,20 @@
     display: none !important;
 }
 
+body::-webkit-scrollbar {
+  width: 3px;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: none;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #eaf1ff;
+  outline: #f2f2f2;
+}
+
+
 body {
   width: 317px;
   height: 480px;
